# SphericalHarmonics

./: .flake8  .gitignore  Makefile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: quality-checks.yaml
spherical_harmonics/: __init__.py  fundamental_set.py  gegenbauer_polynomial.py  spherical_harmonics.py
spherical_harmonics/fundamental_system/: fs_11D.npz  fs_14D.npz  fs_17D.npz  fs_18D.npz  fs_3D.npz
src/spherical_harmonics/: __init__.py  fundamental_set.py  gegenbauer_polynomial.py  jax.py  plotting.py  spherical_harmonics.py  tensorflow.py  torch.py  utils.py
src/spherical_harmonics/fundamental_system/: fs_12D.npz  fs_13D.npz  fs_15D.npz  fs_16D.npz  fs_19D.npz  fs_20D.npz  fs_4D.npz  fs_5D.npz
src/spherical_harmonics/lab_extras/: __init__.py  extras.py
src/spherical_harmonics/lab_extras/jax/: __init__.py  extras.py
src/spherical_harmonics/lab_extras/numpy/: __init__.py  extras.py
src/spherical_harmonics/lab_extras/tensorflow/: __init__.py  extras.py
src/spherical_harmonics/lab_extras/torch/: __init__.py  extras.py
tests/: test_fundamental_set.py  test_gegenbauer_polynomial.py  test_plotting.py  test_spherical_harmonics.py
